@@ -4,7 +4,7 @@
 ;;  Copyright (c) 2003 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: kahua-server.scm,v 1.6.2.2 2005/11/29 15:13:47 cut-sea Exp $
+;; $Id: kahua-server.scm,v 1.6.2.3 2005/12/04 02:50:09 nobsun Exp $
 
 ;; This script would be called with a name of the actual application server
 ;; module name.
@@ -182,15 +182,15 @@
       (set-signal-handler! SIGINT  (lambda _
                                      (log-format "[~a] SIGINT" worker-name)
                                      (cleanup)
-                                     (exit 0)))
+                                     (sys-exit 0)))
       (set-signal-handler! SIGHUP  (lambda _
                                      (log-format "[~a] SIGHUP" worker-name)
                                      (cleanup)
-                                     (exit 0)))
+                                     (sys-exit 0)))
       (set-signal-handler! SIGTERM (lambda _
                                      (log-format "[~a] SIGTERM" worker-name)
                                      (cleanup)
-                                     (exit 0)))
+                                     (sys-exit 0)))
 ;;      (set-signal-handler! SIGPIPE #f) ; ignore SIGPIPE
 
       (with-error-handler
